--- a/public/index.html
+++ b/public/index.html
@@ -109,7 +109,10 @@
                         <form id="sanction-form">
                             <div class="form-group">
                                 <label for="player-name">Nom du joueur</label>
-                                <input type="text" id="player-name" required>
+                                <select id="player-name" required>
+                                    <option value="">Sélectionner un joueur...</option>
+                                </select>
+                                <button type="button" id="add-new-player-btn" class="btn btn-secondary" style="margin-top: 10px; width: 100%;">+ Ajouter un nouveau joueur</button>
                             </div>
                             <div class="form-group">
                                 <label for="player-id">ID du joueur</label>
@@ -285,6 +288,14 @@
                 <div class="section-header">
                     <h2>Salons de réunion</h2>
                     <button id="create-meeting-btn" class="btn btn-primary">Créer un salon</button>
+                </div>
+
+                <!-- Liste des salons actifs -->
+                <div id="active-meetings-list" style="margin-bottom: 30px;">
+                    <h3 style="color: var(--text-light); margin-bottom: 20px;">Salons actifs</h3>
+                    <div id="meetings-cards" class="list-container">
+                        <div class="empty-state">Aucun salon actif pour le moment</div>
+                    </div>
                 </div>
 
                 <div id="meeting-room" style="display: none;">
